XO_Project_UAT/Project--XOGrp--UAT/src/objects/Zuora__SubscriptionProductCharge__c.object
<CustomObject>
    <fields>
        <fullName>Zuora__UnitOfMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UOM (Deprecated)</label>
        <referenceTo>Zuora__UnitOfMeasure__c</referenceTo>
        <relationshipLabel>Unit Of Measure</relationshipLabel>
        <relationshipName>Unit_Of_Measure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__UnusedUnitsCreditRates__c</fullName>
        <description>Specifies the rate to credit a customer for unused units of usage. This field is applicable only for overage charge models when the OverageUnusedUnitsCreditOption field value is CreditBySpecificRate.</description>
        <label>Unused Units Credit Rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__UpToPeriodsType__c</fullName>
        <label>Up To Periods Type</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Periods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__Upto_How_Many_Periods__c</fullName>
        <description>Determines the period when discount charge model charge is added.</description>
        <label>Up To How Many Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__UsageRecordRatingOption__c</fullName>
        <description>Determines how Zuora processes usage records for per-unit usage charges.</description>
        <label>UsageRecordRatingOption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__UseDiscountSpecificAccountingCode__c</fullName>
        <description>Determines whether to define a new accounting code for the new discount charge.</description>
        <label>UseDiscountSpecificAccountingCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Version__c</fullName>
        <description>The version of the rate plan charge. Each time a charge is amended, Zuora creates a new version of the rate plan charge.</description>
        <label>Version</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__WeeklyBillCycleDay__c</fullName>
        <description>Specifies which day of the week as the bill cycle day (BCD) for the charge.</description>
        <label>Weekly Bill Cycle Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Zuora_Id__c</fullName>
        <description>The Zuora Id (external primary key) of this Subscription Product &amp; Charge.</description>
        <inlineHelpText>The Zuora Id (external primary key) of this Subscription Product &amp; Charge.</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Subscription Product &amp; Charge</label>
    <listViews>
        <fullName>Subscription_P_C_with_Rate_Plan_Name</fullName>
        <columns>NAME</columns>
        <columns>Zuora__RatePlanName__c</columns>
        <columns>LocationVendorDynamicsAccountID__c</columns>
        <filterScope>Everything</filterScope>
        <label>Subscription P &amp; C with Rate Plan Name</label>
    </listViews>
    <nameField>
        <label>Subscription Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Product &amp; Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Do_not_allow_0_dollar_TCV_charges</fullName>
        <active>false</active>
        <description>To reduce our data footprint and clear up confusion for sales reps, we are not syncing down the charges that have a $0 value.</description>
        <errorConditionFormula>AND(Zuora__TotalContractValue__c = 0,  
OR(Zuora__Subscription__r.Product_Line__c = &apos;&apos;,
   Zuora__Subscription__r.Product_Line__c = &apos;Migrated Contract&apos;),
Name &lt;&gt; &apos;Charge #00&apos;
)</errorConditionFormula>
        <errorDisplayField>Zuora__TotalContractValue__c</errorDisplayField>
        <errorMessage>$0 legacy charges are ignored when the Subscription has a TCV.  Only the initial charge (Charge #00) may be $0.</errorMessage>
    </validationRules>
</CustomObject>